--- a/main.css
+++ b/main.css
@@ -2,56 +2,168 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
-
+body{
+    height: 100vh;
+    width: 100vw;
+}
 .calculator {
-    height: 40vh;
-    width: 25vw;
     position: relative;
-    left: 37rem;
-    top: 12rem;
+    display: flex;
+    height: 26.5rem;
+    width: 15.5rem;
+    box-shadow: .2rem .2rem .2rem .2rem rgba(0, 0, 0, .4);
+    background-color: rgb(46, 46, 46);
+    justify-content: stretch;
+    flex-direction: column;
+    align-items: center;
+    top: 10rem;
+    left: 45rem;
+    padding: .2rem;
 }
 
-.button {
-    height: 5rem;
-    width:  5rem;
-    padding: 0;
-    background-color: #02141b;
-    color: #d8113c;
-    border-radius:  1rem;
-    border: unset;
-}
-
-.table {
-    margin-top: 1rem;
-}
-
-.screen, .button {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:  2rem;
-    font-weight: 200;
-}
-
-.table, .screen {
+.screen {
+    position: relative;
+    top:0rem;
+    left:0rem;
+    font-weight: bolder;
+    height: 4.3rem;
+    width: 15rem;
+    margin: .2rem;
+    color: rgb(212, 54, 33);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.screen{
-    border: solid .2rem #02141b;
-     width: 20.5rem;
-    height: 5rem;
-    position: relative;
-    left: 2.2rem;
-    border-radius: 1rem;
-    overflow: hidden;
+.buttons {
+    
+    display: grid;
+    
+    grid-template-columns: repeat(4, minmax(25px,4.3rem));
+    grid-template-rows: repeat(5, minmax(25px,4.3rem));
+    font-size:1rem;
+    font-weight: bolder;
+    row-gap: .1rem;
+    column-gap: .1rem;
+    
 }
 
-[value]:active {
-transform: scale(1.1);
+.buttons > div {
+    background-color: rgb(231, 73, 73);
+    height: 4.3rem;
+    line-height: 4.5rem;
+    display: flex;
+    justify-content: center;
 }
 
-[value]:hover {
+.buttons > div:hover{
+    background-color: rgb(182, 60, 60);
     cursor: pointer;
 }
+.buttons > div:active{
+transform: scale(1.05);
+}
+#zero{
+    grid-row: 5/6;
+    grid-column: 2/3;
+
+}
+
+#one{
+    grid-row: 4/5;
+    grid-column: 1/2;
+
+}
+
+
+#two{
+    grid-row: 4/5;
+    grid-column: 2/3;
+
+}
+
+
+#three{
+    grid-row: 4/5;
+    grid-column: 3/4;
+
+}
+
+
+#four{
+    grid-row: 3/4;
+    grid-column: 1/2;
+
+}
+
+
+#five{
+    grid-row: 3/4;
+    grid-column: 2/3;
+
+}
+
+
+#six{
+    grid-row: 3/4;
+    grid-column: 3/4;
+
+}
+
+#seven{
+    grid-row: 2/3;
+    grid-column: 1/2;
+
+}
+#eigth{
+    grid-row: 2/3;
+    grid-column: 2/3;
+
+}
+
+#nine{
+    grid-row: 2/3;
+    grid-column: 3/4;
+
+}
+
+
+#divide{
+    grid-row: 4/5;
+    grid-column: 4/5;
+
+}
+
+#multiply{
+    grid-row: 3/4;
+    grid-column: 4/5;
+
+}
+
+#subs{
+    grid-row: 2/3;
+    grid-column: 4/5;
+
+}
+
+#add{
+    grid-row: 1/2;
+    grid-column: 4/5;
+
+}
+
+#equal{
+    grid-row: 5/6;
+    grid-column:  3/span 2 ;
+}
+    
+
+#float{
+    grid-row: 5/6;
+    grid-column: 1/2;
+
+}
+
+div:
