--- a/main.css
+++ b/main.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 body{
     height: 100vh;
@@ -13,9 +12,10 @@ body{
     display: flex;
     height: 26.5rem;
     width: 15.5rem;
+    font-family: monospace;
     box-shadow: .2rem .2rem .2rem .2rem rgba(0, 0, 0, .4);
     background-color: rgb(46, 46, 46);
-    justify-content: stretch;
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
     top: 10rem;
@@ -24,16 +24,20 @@ body{
 }
 
 .screen {
-    position: relative;
     top:0rem;
     left:0rem;
-    font-weight: bolder;
+    font-size: 1.5rem;
     height: 4.3rem;
     width: 15rem;
     margin: .2rem;
     color: rgb(212, 54, 33);
+}   
+.view{
+    padding: .2rem;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -50,19 +54,20 @@ body{
     
 }
 
-.buttons > div {
+.buttons > button {
     background-color: rgb(231, 73, 73);
     height: 4.3rem;
     line-height: 4.5rem;
     display: flex;
     justify-content: center;
+    border: none;
 }
 
-.buttons > div:hover{
+.buttons > button:hover{
     background-color: rgb(182, 60, 60);
     cursor: pointer;
 }
-.buttons > div:active{
+.buttons > button:active{
 transform: scale(1.05);
 }
 #zero{
@@ -131,39 +136,38 @@ transform: scale(1.05);
 
 
 #divide{
-    grid-row: 4/5;
+    grid-row: 5/6;
     grid-column: 4/5;
 
 }
 
 #multiply{
-    grid-row: 3/4;
+    grid-row: 4/5;
     grid-column: 4/5;
 
 }
 
 #subs{
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-column: 4/5;
 
 }
 
 #add{
-    grid-row: 1/2;
+    grid-row: 2/3;
     grid-column: 4/5;
 
 }
 
 #equal{
     grid-row: 5/6;
-    grid-column:  3/span 2 ;
+    grid-column:  3/4 ;
 }
     
 
-#float{
+#clear{
     grid-row: 5/6;
     grid-column: 1/2;
 
 }
 
-div:
